{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 19,
  "lineage": "0c51134f-2618-ddba-ad25-7e960fcd2ef0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:internet-gateway/igw-04aa032b0d69b421e",
            "id": "igw-04aa032b0d69b421e",
            "owner_id": "137812391981",
            "region": "ap-south-2",
            "tags": {
              "Name": "vpc-5 IGW"
            },
            "tags_all": {
              "Name": "vpc-5 IGW"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "igw-04aa032b0d69b421e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route-Table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:route-table/rtb-012501d878af499d7",
            "id": "rtb-012501d878af499d7",
            "owner_id": "137812391981",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04aa032b0d69b421e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-5_Public_RT"
            },
            "tags_all": {
              "Name": "vpc-5_Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtb-012501d878af499d7",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route-Table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:route-table/rtb-0a86cc9ad12bcab64",
            "id": "rtb-0a86cc9ad12bcab64",
            "owner_id": "137812391981",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [],
            "tags": {
              "Name": "vpc-5_Private_RT"
            },
            "tags_all": {
              "Name": "vpc-5_Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtb-0a86cc9ad12bcab64",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05569b047a66e4c1c",
            "region": "ap-south-2",
            "route_table_id": "rtb-012501d878af499d7",
            "subnet_id": "subnet-0ea98aa0c8f05d760"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-05569b047a66e4c1c",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.Route-Table1",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087216ea7e729e232",
            "region": "ap-south-2",
            "route_table_id": "rtb-0a86cc9ad12bcab64",
            "subnet_id": "subnet-0c86a59b96f42d63a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-087216ea7e729e232",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.Route-Table2",
            "aws_subnet.sub3",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc306a0ec0fcd5f",
            "region": "ap-south-2",
            "route_table_id": "rtb-0a86cc9ad12bcab64",
            "subnet_id": "subnet-07baca60310721d9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-04dc306a0ec0fcd5f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.Route-Table2",
            "aws_subnet.sub4",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eeb9f2526be2bf2",
            "region": "ap-south-2",
            "route_table_id": "rtb-0a86cc9ad12bcab64",
            "subnet_id": "subnet-00a921337a01a8642"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-09eeb9f2526be2bf2",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.Route-Table2",
            "aws_subnet.sub5",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08db7abcb2d448214",
            "region": "ap-south-2",
            "route_table_id": "rtb-0a86cc9ad12bcab64",
            "subnet_id": "subnet-01b2e393d60be63d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-08db7abcb2d448214",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.Route-Table2",
            "aws_subnet.sub6",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027708e1115690f52",
            "region": "ap-south-2",
            "route_table_id": "rtb-012501d878af499d7",
            "subnet_id": "subnet-032fc0c766e2c8e9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "rtbassoc-027708e1115690f52",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.Route-Table1",
            "aws_subnet.sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-0ea98aa0c8f05d760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "50.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea98aa0c8f05d760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "my-public-subnet-2a"
            },
            "tags_all": {
              "Name": "my-public-subnet-2a"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-0ea98aa0c8f05d760",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-032fc0c766e2c8e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "50.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032fc0c766e2c8e9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "my-public-subnet-2b"
            },
            "tags_all": {
              "Name": "my-public-subnet-2b"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-032fc0c766e2c8e9d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-0c86a59b96f42d63a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "50.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c86a59b96f42d63a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Application-2a"
            },
            "tags_all": {
              "Name": "Application-2a"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-0c86a59b96f42d63a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-07baca60310721d9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "50.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07baca60310721d9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Application-2b"
            },
            "tags_all": {
              "Name": "Application-2b"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-07baca60310721d9a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-00a921337a01a8642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "50.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a921337a01a8642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "DB-2a"
            },
            "tags_all": {
              "Name": "DB-2a"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-00a921337a01a8642",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:subnet/subnet-01b2e393d60be63d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "50.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b2e393d60be63d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137812391981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "DB-2b"
            },
            "tags_all": {
              "Name": "DB-2b"
            },
            "vpc_id": "vpc-005e5f0bf6308d8e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "subnet-01b2e393d60be63d0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:137812391981:vpc/vpc-005e5f0bf6308d8e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "50.0.0.0/16",
            "default_network_acl_id": "acl-090c0f571fc372b85",
            "default_route_table_id": "rtb-036bb9459b881b7e7",
            "default_security_group_id": "sg-0b633243664885bf5",
            "dhcp_options_id": "dopt-0419428971a69cf7e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005e5f0bf6308d8e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036bb9459b881b7e7",
            "owner_id": "137812391981",
            "region": "ap-south-2",
            "tags": {
              "Name": "test-demo-vpc"
            },
            "tags_all": {
              "Name": "test-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137812391981",
            "id": "vpc-005e5f0bf6308d8e1",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}